--- a/Source/iOS/PixateFreestyle/PixateFreestyle.csproj
+++ b/Source/iOS/PixateFreestyle/PixateFreestyle.csproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{9037BF82-0939-44F5-8C47-AB825BBF8D4F}</ProjectGuid>
     <ProjectTypeGuids>{F5B4F3BC-B597-4E2B-B552-EF5D8A32436F};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
@@ -53,9 +51,9 @@
     <None Include="Makefile" />
   </ItemGroup>
   <ItemGroup>
-    <ObjcBindingNativeLibrary Include="PixateFreestyle" />
+    <ObjcBindingCoreSource Include="StructsAndEnums.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ObjcBindingCoreSource Include="StructsAndEnums.cs" />
+    <ObjcBindingNativeLibrary Include="libPixateFreestyle.a" />
   </ItemGroup>
 </Project>
