--- a/Source/Android/PixateFreestyle/PixateFreestyle.csproj
+++ b/Source/Android/PixateFreestyle/PixateFreestyle.csproj
@@ -9,7 +9,7 @@
     <RootNamespace>PixateFreestyle</RootNamespace>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
-    <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
+    <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
     <AssemblyName>PixateFreestyle</AssemblyName>
     <TargetFrameworkVersion>v4.4</TargetFrameworkVersion>
   </PropertyGroup>
